--- a/TradeApp/Sources/Info.plist
+++ b/TradeApp/Sources/Info.plist
@@ -6,6 +6,7 @@
 	<array>
 		<string>Inter-Bold.ttf</string>
 		<string>Inter-Medium.ttf</string>
+		<string>Inter-ExtraBold.ttf</string>
 	</array>
 	<key>UIApplicationSceneManifest</key>
 	<dict>
